[metadata]
name = certifier
author = Behance
author_email = devops-behance@adobe.com
summary = Automated SSL Cert Checker
description-file = README.md
license = Apache License, Version 2.0
home-page = https://github.com/behanceops/certifier
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only
